# toy-git

./: Cargo.toml  README.md  flake.nix
src/: index.rs  main.rs  object.rs
tests/: cat_file.rs  commit.rs  commit_tree.rs  hash_object.rs  init.rs  update_index.rs  write_tree.rs
